--- a/app/globals.css
+++ b/app/globals.css
@@ -35,7 +35,6 @@
   width: 100%;
   height: 100%;
   background-image: url("./../public/cine-background.webp"); /* Ruta correcta a tu imagen */
-  background-attachment: fixed;
   background-size: cover;
   background-position: center;
   filter: brightness(70%) blur(5px); /* Ajusta el brillo y desenfoque de la imagen de fondo */
@@ -67,5 +66,41 @@
     transform: translateX(
       -50%
     ); /* Desplaza las tarjetas hacia la izquierda hasta la mitad */
+  }
+}
+
+@media (width < 640px) {
+  .query {
+    height: auto;
+    text-align: center;
+    padding-inline: 15px;
+  }
+
+  .input {
+    width: 300px;
+    min-width: none;
+  }
+
+  .resutlInput {
+    width: 320px;
+  }
+}
+
+@media (width < 650px) {
+  .poster {
+    height: 250px;
+  }
+}
+
+@media (width < 610px) {
+  .poster {
+    margin-bottom: 50px;
+  }
+}
+
+@media (width < 380px) {
+  .input {
+    width: 280px;
+    min-width: none;
   }
 }
